[tool.poetry]
name = "daa"
version = "1.0.0"
description = "A Design and Analysis of Algorithms library"
authors = ["Pablo <pablohuggem@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Tomcat-42/daa"
repository = "https://github.com/Tomcat-42/daa"
keywords = ["daa", "algorithms", "data structures", "sorting", "searching", "c++", "c++11", "c++ module"]
packages = [
  { include = "daa", format = "sdist" },
]
include = ["libdaa", "build.py"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core", "setuptools", "cmake", "pybind11"]
build-backend = "poetry.core.masonry.api"
