[tool.poetry]
name = "pydaa"
version="1.7.3"
description = "A Design and Analysis of Algorithms library"
authors = ["Pablo <pablohuggem@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Tomcat-42/pydaa"
documentation = "https://github.com/Tomcat-42/pydaa"
repository = "https://github.com/Tomcat-42/pydaa"
keywords = ["pydaa", "algorithms", "data structures", "sorting", "searching", "c++", "c++11", "c++ module"]
build = "build.py"
packages = [
    { include = "pydaa", format = "wheel"},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.10.0"
pytest-mock = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "^3.0.0"
sphinx-rtd-theme = "^0.4.3"


[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.16", "pybind11-stubgen @ git+https://github.com/HaarigerHarald/pybind11-stubgen#egg=pybind11-stubgen"]
build-backend = "setuptools.build_meta"
